--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music by me | headquarter8302.github.io</title>
-  <link rel="stylesheet" href="/resources/styles.css">
+  <link rel="stylesheet" href="/resource/styles.css">
   <meta name="description" content="My music" />
-  <link rel="shortcut icon" href="resource/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/resource/favicon.ico" type="image/x-icon" />
   <style>
     html,
     body {
