--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     a {
       padding: 1em;
       display: block;
+      width: fit-content;
       /* position: fixed; */
     }
 
@@ -85,6 +86,16 @@
       <ul>
         <li><a href="https://youtu.be/iaca1n_V0RQ">YouTube</a></li>
         <li><a href="https://soundcloud.com/headquarter8302/transmorphosis">SoundCloud</a></li>
+      </ul>
+      </p>
+    </section>
+    <section class="music-card">
+      <img src="img/metamorph_piano.png" alt="&#34;Metamorph Piano Cover&#34; cover art" class="img-noinvert">
+      <h2>Metamorph Piano</h2>
+      <h3>March 27th, 2024</h3>
+      <p>A piano cover of Metamorph by deadbladerr0r. <wbr>I had to tackle the piano plugin's overbright sound to make it viable enough to for my composition. <wbr>The later parts are almost impossible to play without improvisation though.
+      <ul>
+        <li><a href="https://youtu.be/aMwnlGF5KUw">YouTube</a></li>
       </ul>
       </p>
     </section>
