--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
       </ul>
       </p>
     </section>
+    <section class="music-card">
+      <h2>Sunray</h2>
+      <img src="img/sunray.png" alt="&#34;Sunray&#34; cover art" class="img-noinvert">
+      <h3>March 29th, 2024</h3>
+      <p>Ambient soundtrack. <wbr>Subtle synths and brass adds a bit of expressiveness to the track. <wbr>I truly enjoyed making a non-techno/phonk piece for once.
+      <ul>
+        <li><a href="https://youtu.be/eVPSTtSb4_4">YouTube</a></li>
+        <li><a href="https://soundcloud.com/headquarter8302/sunray">SoundCloud</a></li>
+      </ul>
+      </p>
+    </section>
   </main>
 </body>
 
