--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
       </ul>
       </p>
     </section>
+    <section class="music-card">
+      <h2>METAMORPHOSIS IV Piano</h2>
+      <h3>March 31st, 2024</h3>
+      <p>A piano cover of METAMORPHOSIS IV by TOKYOPHILE and rai suzuya. <wbr>For some reason, I cannot, for the life of me, figure out the correct time signature and BPM of the track, resulting in this mess.
+      <ul>
+        <li><a href="https://youtu.be/FoYDhRVraJQ">YouTube</a></li>
+      </ul>
+      </p>
+    </section>
   </main>
 </body>
 
