--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@
       </ul>
       </p>
     </section>
+    <section class="music-card">
+      <img src="img/bitmorphosis.jpg" alt="&#34;BITMORPHOSIS&#34; cover art" class="img-noinvert">
+      <h2>BITMORPHOSIS</h2>
+      <h3>May 9th, 2024</h3>
+      <p>An 8-bit cover of METAMORPHOSIS using Nescaline and FreeBoy synthesizers. <wbr>This was a new experience for me, I was originally planning to use extended distortions out of percussions, but I found that using these synths yield a more authentic sound.
+      <ul>
+        <li><a href="https://youtu.be/sytB1zNZF2k">YouTube</a></li>
+      </ul>
+      </p>
+    </section>
   </main>
 </body>
 
