--- a/index.html
+++ b/index.html
@@ -128,6 +128,17 @@
       </ul>
       </p>
     </section>
+    <section class="music-card">
+      <img src="img/crystal_rxpture.png" alt="&#34;CRYSTAL RxPTURE&#34; cover art" class="img-noinvert">
+      <h2>CRYSTAL RxPTURE</h2>
+      <h3>August 24th, 2024</h3>
+      <p>I like Interworld's RAPTURE, I also like Isolate.exe's Crystals. Here's CRYSTAL RxPTURE. I finally learnt that bandpass filters are a thing.
+      <ul>
+        <li><a href="https://youtu.be/Sw7KIB4Xx5I">YouTube</a></li>
+        <li><a href="https://soundcloud.com/headquarter8302/crystal-rxpture">SoundCloud</a></li>
+      </ul>
+      </p>
+    </section>
   </main>
 </body>
 
